tests/ui/errors/snapshots/parse_rust_impl_trait_for_type.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Syntax error
   ╭─[test.lis:8:15]
 7 │ 
 8 │ impl Showable for Item {
   ·               ─┬─
   ·                ╰── invalid syntax
 9 │   fn show(self) -> string {
   ╰────
  help: Lisette types satisfy interfaces automatically by having the required methods. Use `impl Type { ... }` to add methods · code: [parse.syntax_error]
